--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(#60ebeb 0%, #27ae60 100%);;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
     color: #D50000;
     text-align: center;
     font-size: 30px;
